# wc

./: .gitignore  CLAUDE.md  CNAME  Makefile  audio.opus  bump_chart_altair.html  gen_altair_charts.py  gen_bump.py  gen_race.py  gen_ratio_chart.py  gen_streak_table.py  generate_race.py  index.html  pyproject.toml  race.webm  race_with_audio.webm  ratio_chart_altair.html  streak_table.html  style.css  test.py  test_matplotlib_bcr.py  wc.xlsx
