[project]
name = "wc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.2.2",
    "fastexcel>=0.20.2",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "vl-convert-python>=1.9.0.post1",
    "yt-dlp>=2026.6.9",
]
